--- a/css/ProductView.css
+++ b/css/ProductView.css
@@ -689,3 +689,15 @@
 		top: 3px;
 	}
 }
+
+@media (max-width: 767px) {
+	.sticky-atc-btn {
+		display: none;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+	.buy-one-click {
+		display: none;
+	}
+}
